# riscv-um

./: .gitignore  Cargo.toml  shell.nix  st0.txt  st1.txt
benchgen/: benchgen  benchgen.c  run.sh
emu_tests/riscv64gc/compiler/: Cargo.toml
emu_tests/riscv64gc/compiler/src/: main  main.rs
nqueens/: .gitignore  nqueens.c  run.sh
src/: main.rs  mm.rs  utils.rs
